# librdkafka_demo

./: CMakeLists.txt  README.md
include/kafka_consumer/: Simple_kafka_consumer.h
include/kafka_producer/: Simple_kafka_producer.h
include/rd_kafka_utils/: rd_kafka_utils.h
src/: librdkafka_issue_demo.cpp
src/kafka_consumer/: Simple_kafka_consumer.cpp
src/kafka_producer/: Simple_kafka_producer.cpp
src/rd_kafka_utils/: rd_kafka_utils.cpp
test/: librdkafka_issue_demoTest.cpp  librdkafka_issue_demo_test.cpp
